mType/tests/testFiles/error/error/invalidFunctionNameSpecialChar.mt
function test*Function(): void {
    print("test");
}
